--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,34 @@
-.bg-blue {
-    background-color: #12B1F0;
+.bg-img {
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('./cinema-bg.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
-* {
+p, h2, h1, input[type="text"], input[type="submit"] {
     font-family: 'Nunito', sans-serif;
+}
+
+.logo {
+    font-size: 4rem;
+}
+
+.email-input {
+    height: 40px;
+    width: 250px;
+    border: none;
+    border-radius: 4px;
+    padding-left: 10px;
+}
+
+.submit-btn {
+    /* background-color: #E607A0!important; */
+    background-color: #12B1F0!important;
+    color: white!important;
+    height: 40px;
+}
+
+.text-extra-bold {
+    font-weight: 800!important;
 }
