--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .bg-img {
-    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('cinema-bg.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('./cinema-bg.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
