Added responsiveness to site

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,43 @@ p, h2, h1, input[type="text"], input[type="submit"] {
     font-size: 4rem;
 }
 
+.caption {
+    font-weight: 600!important;
+}
+
+@media(max-width: 560px) {
+    .logo {
+        font-size: 3rem;
+    }
+
+    .caption {
+        font-size: 2rem!important;
+    }
+    
+}
+
+@media(min-width: 400px) and (max-width: 574px) {
+    .submit-btn {
+        width: 80%!important;
+        margin-top: 1rem!important;
+    }
+
+    .email-input {
+        width: 80%!important;
+    }
+}
+
+@media(max-width: 399px) {
+    .submit-btn {
+        width: 100%!important;
+        margin-top: 1rem!important;
+    }
+
+    .email-input {
+        width: 100%!important;
+    }
+}
+
 .email-input {
     height: 40px;
     width: 250px;
