--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,8 @@ p, h2, h1, input[type="text"], input[type="submit"] {
     height: 40px;
     width: 250px;
     border: none;
-    border-radius: 4px;
-    padding-left: 10px;
+    border-radius: 20px;
+    padding-left: 15px;
 }
 
 .submit-btn {
@@ -64,6 +64,7 @@ p, h2, h1, input[type="text"], input[type="submit"] {
     background-color: #12B1F0!important;
     color: white!important;
     height: 40px;
+    border-radius: 20px!important;
 }
 
 .text-extra-bold {
