Added success text to page

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,21 @@ p, h2, h1, input[type="text"], input[type="submit"] {
     border-radius: 20px!important;
 }
 
+.submit-btn:hover {
+    background-color: white!important;
+    border: 1px solid #12B1F0!important;
+    color: #12B1F0!important;
+}
+
+.submit-btn:active {
+    background-color: #12B1F0!important;
+    color: white!important;
+}
+
 .text-extra-bold {
     font-weight: 800!important;
+}
+
+.hide {
+    display: none;
 }
